# zwift_smartload

./: .gitignore  README.md
dongle/: CMakeLists.txt  README.md  prj.conf  project_description.md
dongle/boards/: nrf52840dongle_nrf52840.overlay  raytac_mdbt50q_cx_40_dongle_nrf52840.conf  raytac_mdbt50q_cx_40_dongle_nrf52840.overlay
dongle/good_one/src/: common.h  device_manager.c  ftms_control_point.c  gatt_discovery.c  gatt_services.c  gatt_services.h  grade_limiter.c  grade_limiter.h  main.c  main_before_the_split  main_simple.c  notification_handler.c  notification_handler.h  nvs_storage.c
dongle/src/: common.h  device_manager.c  device_manager.h  ftms_control_point.c  ftms_control_point.h  gatt_discovery.c  gatt_discovery.h  led_feedback.c  led_feedback.h  main.c  notification_handler.c  nvs_storage.c  nvs_storage.h
server/: .dockerignore  README.md  config.conf  playback_serial.py  project_description.md  requirements.txt  run.py  sample.json
server/docker/: Dockerfile  docker-compose.yml
server/src/: __init__.py  app.py  data_buffer.py  serial_reader.py
server/static/js/: dashboard.js
server/templates/: index.html
